Update 'my bookings' page to include headers for active and expired bookings. Adjust color of expired status to avoid contrast errors. Refactor booking list function and html.

--- a/static/css/booking-form.css
+++ b/static/css/booking-form.css
@@ -1,5 +1,6 @@
-/* Contains specific styles for the booking form, 'My Bookings' page
-as well as AllAuth pages (login/out and register).
+/* Contains specific styles for pages containing a form (including AllAuth)
+, as well as the 'My Bookings' page. 
+
 Generic styles are inherited from style.css
 */
 
@@ -105,6 +106,17 @@ Generic styles are inherited from style.css
         width: 50%;
     }
 }
+
+/* Expired/ Active Styles for My Bookings Page */
+
+.expired {
+    color: rgb(167, 43, 43);
+}
+
+.active {
+    color: rgb(35, 95, 35);
+}
+
 
 /* On smaller screens, still maintain consistent layout */
 @media (max-width: 620px) {
